k8s/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    # port the world will come in on, default port for postgres
    - port: 5432
      # port we will redirect to. In this case, we won't.
      targetPort: 5432
