k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ADD INGRESSCLASSNAME FIELD
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # UPDATE PATH
          - path: /?(.*)
            # ADD PATHTYPE
            pathType: ImplementationSpecific
            backend:
              # UPDATE SERVICE FIELDS
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          # UPDATE PATH
          - path: /api/?(.*)
            # ADD PATHTYPE
            pathType: ImplementationSpecific
            backend:
              # UPDATE SERVICE FIELDS
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
